2000-06-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/cgm.trm(CGM_option): reject linewidth zero to avoid
	infinite looping in CGM_dashed_vector(), later

2000-06-13  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/datafile.c(df_gets): prompt visibly for inline data, if
	in interactive mode.

	* src/set.c(reset_command): set grid linewidth to 1.0, like the
	startup value (was 0.5, incorrectly).

2000-06-10  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* GNUmakefile, Makefile.am: Move pre-dist target from Makefile.am.

	* configure.in: New --enable-epslatex option. Cleanups.

	* src/term.h: Add epslatex support.

	* term/ggi.trm: New GGI driver, contributed by Cesar Crusius
	<crusius@leland.stanford.edu>. Support not complete yet.
	Requires -lgii, -lggi and -lggiwmh for linking.

	* term/epslatex.trm: New terminal driver by Gregor Thalhammer
	<Gregor.Thalhammer@uibk.ac.at>, updated version from 7th June.

2000-06-09  Johannes Zellner <johannes@zellner.org>

	* src/save.c: don't close the fp's if it's stdout

2000-05-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* Ignore `replot` command called from mouse/hotkey-event-enhanced
	terminal when some plot data were piped in gnuplot via stdin ---
	i.e., no mouse replot after `plot '-'`). See also "no replot after
	`plot '-'`" discussion in the gnuplot-beta newsgroup.
	New variables: plotted_data_from_stdin, replot_disabled.

2000-05-04  Johannes Zellner <johannes@zellner.org>

	* configure.in, src/plot.c, src/parse.c: replace setjmp by
	sigsetjmp and longjmp by siglongjmp if these functions
	(or macros) are available.

2000-05-04  Johannes Zellner <johannes@zellner.org>

	* src/command.c: always include ipc.h

	* term/linux.trm: typedef int in declaration of linux_line_func_ptr

	* term/x11.trm: added a few ifdef USE_MOUSE's to exclude mouse
	code, if compiling w/o mouse support.

2000-05-02  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* INSTALL: In "Platform notes" section, add hint for using